--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "^0.76.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
